--- a/lab4/index.html
+++ b/lab4/index.html
@@ -17,7 +17,7 @@
         <h4>GitHub account: github.com/ElSugar</h4>
       </div>
       <div class="contact-form">
-        <h3>Contanct Me</h3>
+        <h3>Contact Me</h3>
         <form id="contactform">
           <p>
             <label>Full Name</label>
